exports[`<Icon /> matches the snapshot 1`] = `
<div
  className="Icon-wrapper">
  <i
    className="fa fa-warning fa-lg" />
</div>
`;

exports[`<Icon /> when a size is provided matches the snapshot 1`] = `
<div
  className="Icon-wrapper">
  <i
    className="fa fa-warning fa-lg" />
</div>
`;

exports[`<Icon /> when an name is provided matches the snapshot 1`] = `
<div
  className="Icon-wrapper">
  <i
    className="fa fa-github fa-lg" />
</div>
`;
